[Hotfix] fixed spacing between nodes

--- a/app/assets/stylesheets/network.css.scss
+++ b/app/assets/stylesheets/network.css.scss
@@ -1,11 +1,14 @@
-.network-node {
-  background-color: $first-touch-white;
-  border-radius: 4px;
-  padding: 14px;
-  margin-right: 10px;
+.network-node-wrapper {
+  padding: 10px;
 
-  .name {
-    color: $main-header-color;
-    text-transform: uppercase;
+  .network-node {
+    background-color: $first-touch-white;
+    border-radius: 4px;
+    padding: 14px;
+
+    .name {
+      color: $main-header-color;
+      text-transform: uppercase;
+    }
   }
 }
